--- a/.cargo/config
+++ b/.cargo/config
@@ -1,4 +1,10 @@
 [build]
 target = "thumbv7m-none-eabi"
+[run]
+target = "thumbv7m-none-eabi"
 
-rustflags = ["-C", "link-arg=-Tlink.x"]
+[target.thumbv7m-none-eabi]
+runner = "arm-none-eabi-gdb -q"
+rustflags = [
+  "-C", "link-arg=-Tlink.x",
+]
