--- a/.cargo/config
+++ b/.cargo/config
@@ -1,10 +1,4 @@
 [build]
 target = "thumbv7m-none-eabi"
-[run]
-target = "thumbv7m-none-eabi"
 
-[target.thumbv7m-none-eabi]
-runner = "arm-none-eabi-gdb -q"
-rustflags = [
-  "-C", "link-arg=-Tlink.x",
-]
+rustflags = ["-C", "link-arg=-Tlink.x"]
