--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,11 @@ keypad2 = "0.1.1"
 keypad = "0.2.2"
 no-std-compat = {version="0.4.1", features=["alloc"]}
 
+[dependencies.lexical-core]
+version = "0.8.5"
+default-features = false
+features = ["parse-floats"]
+
 [dependencies.stm32f4xx-hal]
 features = ["stm32f401", "rt"]
 version = "^0.13.2"
