--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 cortex-m = "^0.7.6"
 cortex-m-rt = "^0.7.1"
+alloc-cortex-m = "0.4.3"
 panic-halt = "^0.2.0"
 libm = "0.2.5"
 embedded-hal = "0.2.7"
